week03/styles/design.css
/* css directives here */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
	font-family: Roboto, helvetica, sans-serif;
}

header,
main,
footer {
	max-width: 760px;
	margin: 0 auto;
}

h1 {
	border-bottom: 1px solid rgba(0, 0, 0, 0.1);
	margin: 1rem 0;
	padding: 0 1rem 0 1rem;
}

main {
	display: grid;
    grid-template-columns: 2fr 1fr;
	grid-gap: 1.5rem;
}

h2 {
	color: navy;
	text-align: left;
	padding-left: 1rem;
	grid-column: 1 / span 3;
}

h3 {
	margin-bottom: 0.5rem;
}

section {
    padding: 1rem;
}

/*article {
    grid-area: article;
}*/


article p {
	text-align: left;
    /* word-break: break-all;
	 hyphens: auto; */
	overflow-wrap: break-word;
	hyphens: auto;
}

}
list {
	text-align: justify;
}


.callout {
    padding: 1rem;
	color: #ccc;
	background-color: #352963;
	grid-column: 1 / span 3;
}

footer {
	margin-top: 1rem;
	padding: 0.5rem 1rem;
	border-top: 1px solid rgba(0, 0, 0, 0.2);
	font-size: smaller;
	text-align: left;
}

.banner {
	border: solid 1px rgba(0, 0, 0, 0.2);
	padding: 1rem;
	text-align: center;
	margin: 1rem 0;
	background-color: #eef;
}

